compiler/tests/should-fail/FunctionClash.via
/* NameClashError */

fun f() {}

fun f() {}
